# geo-area

./: CMakeLists.txt  Makefile  README.md  area.c
source/: angle.c  angle.h  area.c  area.h  const.h  edge_intersection.c  edge_intersection.h  main.c  perimeter.c  perimeter.h  polygon.c  polygon.h
